src/icons/WeaveTabs-*.png: Generated some truly horrible icons so we aren't using the icons of a different firefox plugin.  These maybe illustrate this plugins' purpose.
src/manifest.json:
Switched from using nice icons belonging to the original firefox plugin we forked to our own horrible icons.

src/background.js:
Removed more of the original code.
Removed some commented out code of our own.
Added logic to unshift our "singles" onto larger buckets, so they don't remain "stuck" on the far right end of the set of tabs.

src/popup/sortabs.js:
Removed the commented out original code.
Switched the icon out from a non-extant file to our own, truly horrible, icon.

src/icons/sortabs-*.png:
sortabs-*.svg:
Removed these good icons because they don't really apply to this plugin any longer.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,14 +4,14 @@
 	"version" : "0.2",
 	"author" : "kpuc <chris@ciar.org>",
 	"icons" : {
-		"48" : "icons/sortabs-48.png"
+		"48" : "icons/WeaveTabs-48.png"
 	},
 	"description" : "Redistribute tabs by frequency of domain name",
 	"browser_action" : {
 		"default_icon" : {
-			"16" : "icons/sortabs-16.png",
-			"24" : "icons/sortabs-24.png",
-			"48" : "icons/sortabs-48.png"
+			"16" : "icons/WeaveTabs-16.png",
+			"24" : "icons/WeaveTabs-24.png",
+			"48" : "icons/WeaveTabs-48.png"
 		},
 		"default_title" : "FrequencyWeave",
 		"default_popup" : "popup/picker.html",
